--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -22,7 +22,23 @@
 
       <aside>
 
-        <div class="utilizer"></div>
+        <div class="utilizer">
+
+          <div class="avatar">
+
+            <img src="assets/IMG/avatar/avatar_io.jpg" alt="">
+
+            <span>Ciccillo</span>
+
+          </div>
+
+          <div class="icons">
+            <i class="fa-sharp fa-solid fa-circle-notch"></i>
+            <i class="fa-solid fa-message"></i>
+            <i class="fa-solid fa-ellipsis-vertical"></i>
+          </div>
+
+        </div>
 
         <nav></nav>
 
