--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -40,7 +40,19 @@
 
         </div>
 
-        <nav></nav>
+        <nav>
+          <div class="notifications">
+            <i class="fa-solid fa-bell-slash"></i>
+            <div class="status">
+              <span>Ricevi notifiche di nuovi messaggi</span>
+              <span>Attiva notifiche desktop</span>
+            </div>
+          </div>
+          <div class="search-bar">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input type="text" placeholder="Cerca o inizia una nuova chat">
+          </div>
+        </nav>
 
         <div class="chats-made">
           <p>
