[edit] main header

--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -64,12 +64,32 @@
 
       <main>
 
-        <header></header>
+        <header>
+
+          <div class="user">
+
+            <div class="avatar">
+
+              <img src="assets/IMG/avatar/avatar_1.jpg" alt="">
+  
+            </div>
+  
+            <div class="status">
+              <span>Michele</span>
+              <span>Ultimo accesso oggi alle 12:00</span>
+            </div>
+
+          </div>
+
+          <div class="icons">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-paperclip"></i>
+            <i class="fa-solid fa-ellipsis-vertical"></i>
+          </div>
+
+        </header>
 
         <div class="content">
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo ducimus facere modi a magni illo temporibus nostrum esse asperiores illum aliquid necessitatibus, voluptas totam, eum perferendis pariatur et numquam veritatis corporis! Exercitationem laborum assumenda sit earum ratione. Commodi esse, quasi quibusdam magnam numquam eius beatae et similique temporibus suscipit doloribus officiis ex totam quod assumenda minima. Voluptatem ducimus alias praesentium consectetur vitae! Rerum provident illum dicta obcaecati ea, voluptatem incidunt voluptatibus veniam rem nam, explicabo fugiat molestiae aliquid saepe nostrum temporibus! Quia eveniet possimus, iusto vitae, laboriosam eum id cupiditate, fuga labore consequuntur hic error tempora ut vero provident perspiciatis. Quod aut at odio accusamus doloremque deleniti assumenda iusto quos ut eos! Vel odit doloremque dolorum voluptates eligendi illum atque officiis dolores animi, aspernatur nisi error quisquam fugiat reprehenderit omnis vitae alias porro cum velit incidunt architecto! Libero saepe autem error? Ipsam saepe, ea et autem sunt, iure officia laborum nulla distinctio optio quod, ducimus voluptate dolorum quaerat doloribus corrupti! Asperiores a explicabo ipsum dignissimos voluptates ex quasi. Veritatis, deleniti, natus exercitationem, ad illo expedita explicabo enim cumque ipsa velit deserunt minima aliquid aliquam voluptate? Laboriosam laborum, repellat omnis inventore eaque quasi animi exercitationem quidem officiis consequatur architecto delectus id magnam dicta similique dolore saepe ex consequuntur porro quas debitis ipsa incidunt. Natus laudantium voluptates, aliquid ex adipisci deleniti amet, ullam corporis qui modi facere eveniet suscipit et repudiandae accusamus assumenda vitae saepe id? Ipsa nulla id cumque excepturi fugit beatae non maiores perspiciatis vero soluta quas, magni corporis nam impedit autem. Itaque cum, magnam autem amet recusandae libero id at voluptatibus eveniet tenetur voluptas fuga ullam? Architecto distinctio repellendus, eos corporis laborum eius. Placeat quaerat officia, modi quam non at architecto enim ipsa harum maiores. Quasi unde quas a aliquam? Id odit dolorem, laborum neque commodi quisquam expedita et delectus provident itaque modi, nemo nihil dolor aperiam culpa tempore similique! Necessitatibus repudiandae eum officia veniam deserunt, qui voluptates impedit architecto, nobis et asperiores quaerat quam minus ipsam beatae deleniti delectus, vel id nostrum? Corporis veniam deserunt quo! Distinctio veniam temporibus dolorum. Aspernatur doloribus neque laborum culpa, odit tenetur expedita itaque, natus incidunt quis animi quibusdam repellendus harum? Unde hic architecto, dolores recusandae a beatae quasi laborum eveniet amet doloribus quisquam sit eos consequuntur nesciunt quo magnam nihil officia vel debitis nemo reprehenderit officiis? Recusandae deserunt dolor voluptate cupiditate? Aperiam, nesciunt eum quos sit ipsa hic eius impedit! Amet quia ex, repellendus facere blanditiis maxime facilis doloribus ad impedit maiores ipsam fugiat modi eum illum, deleniti delectus eveniet necessitatibus omnis, nulla error debitis cum? Ipsa necessitatibus dolores aliquam minima! Reiciendis maiores quam vero eveniet dolores saepe omnis, officiis illum? Sed, nihil aperiam maiores ipsum pariatur vero autem rem repellendus dignissimos illo tempora, illum sequi id, saepe doloribus? Id laborum porro unde voluptas sequi a tempora pariatur perspiciatis odio, obcaecati ea veniam mollitia dolores accusamus nulla accusantium. Cumque enim, ducimus accusamus dolor eius voluptatum repellat sequi illum aut placeat at itaque ipsum molestias veniam asperiores eum? Vero assumenda, quidem ex quas soluta deserunt eaque reprehenderit omnis. Culpa iste maiores porro quaerat voluptas accusantium sit cumque, quo laudantium ea aspernatur magni, maxime nostrum repudiandae! Omnis sequi sit tempore consequatur deserunt ipsam odit nobis minima culpa, reiciendis, amet debitis dolor aliquid in a fugit? Dicta exercitationem voluptatem, magni porro consequuntur assumenda rerum, expedita doloremque facilis provident perspiciatis beatae officia eveniet ex voluptatum, mollitia aut corrupti tenetur fugit incidunt consequatur natus. Provident doloremque voluptatem debitis incidunt distinctio ducimus a, molestiae itaque asperiores necessitatibus, quibusdam placeat adipisci mollitia libero, ad inventore voluptate maiores explicabo impedit facere. Quis fugit, odio error optio a odit quibusdam assumenda?
-          </p>
         </div>
 
         <footer></footer>
