[edit[ main footer

--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -92,7 +92,15 @@
         <div class="content">
         </div>
 
-        <footer></footer>
+        <footer>
+
+          <i class="fa-regular fa-face-smile"></i>
+
+          <input type="text" placeholder="Scrivi un messaggio">
+
+          <i class="fa-solid fa-microphone"></i>
+
+        </footer>
 
       </main>
 
