--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -90,6 +90,12 @@
         </header>
 
         <div class="content">
+            <div class="message sent">
+              inviato 
+              <span id="hours">15:30</span>
+            </div>
+            <div class="message sent">inviato</div>
+            <div class="message received">ricevuto</div>
         </div>
 
         <footer>
