[edit] aside chats-made

--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -55,9 +55,41 @@
         </nav>
 
         <div class="chats-made">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum earum doloribus voluptas quas quae. Libero quidem expedita corrupti? Recusandae cupiditate eos suscipit minima ullam ex incidunt iste porro quisquam! Saepe odit repellendus voluptates perferendis quasi ad blanditiis ratione tempora, aperiam illum neque eveniet. Eaque minus at odit, distinctio a iure, recusandae temporibus reiciendis animi, doloremque deserunt unde hic dicta excepturi voluptatem eligendi ex minima voluptates molestias voluptatum cum nesciunt ab? Sunt ducimus harum veritatis aperiam voluptas culpa nam! Ipsum facilis eius nisi, possimus iste expedita atque porro deserunt labore perferendis esse, asperiores distinctio, in sit eos dolor ad hic? At labore sit sequi placeat aperiam delectus illo impedit iste dicta expedita quae, non illum aut mollitia cumque itaque ducimus alias fugit saepe assumenda dolorem libero. Deleniti nemo expedita magni incidunt numquam distinctio quod adipisci perferendis obcaecati. Porro quis vel laboriosam id numquam, commodi rem, tempore cupiditate nihil saepe, aliquam magni itaque! Eius perferendis facilis, commodi quas quia ipsa nihil dolorum ratione voluptatum aliquam molestias labore incidunt quaerat impedit iusto voluptatibus magni pariatur autem. Quos ratione culpa veritatis deleniti beatae facilis quia corporis eum consectetur molestias maiores quidem adipisci eos voluptatem iste mollitia eaque deserunt suscipit, soluta fugiat minima. Iste rem placeat officiis cumque nisi commodi. Aperiam laboriosam optio dolor eligendi debitis modi perspiciatis corrupti veritatis? Sint quisquam eius tempora consequuntur fuga temporibus tenetur perspiciatis consequatur velit reiciendis autem cupiditate eveniet voluptatibus ex doloremque alias beatae, veritatis minima ducimus odit fugiat ipsa quaerat asperiores tempore! Eius reprehenderit maxime voluptas laudantium accusamus doloremque dolorum beatae quas. Odio numquam iure necessitatibus enim quibusdam! Magni perferendis sint, voluptate cum error repellendus veritatis delectus pariatur atque alias voluptatibus, rem ad qui odit accusantium deserunt laboriosam nisi odio excepturi autem, facilis sapiente quo culpa! Adipisci totam inventore, iusto cupiditate doloribus minima culpa soluta veniam voluptate alias tenetur, quam quas explicabo quos! Dolor cum nisi natus soluta vitae consectetur incidunt rerum minus? In ut ab libero harum vel, et totam praesentium illum. Sit molestiae ad quaerat soluta, dicta repellat ab, maxime vel eaque, fugiat facilis. Placeat delectus voluptas nisi aperiam autem ullam necessitatibus fugiat similique, aliquid expedita blanditiis distinctio! Debitis quo soluta quia deserunt nam, repellendus nemo illo tempora nihil maiores. Fuga magnam veniam vitae rerum aliquid vel doloribus sapiente, cupiditate porro reiciendis voluptatem ipsum maiores, atque veritatis nihil ex, voluptas cum optio ea neque esse. Molestias dignissimos doloremque ipsam! Quo nesciunt tempore voluptatum consectetur esse tenetur deserunt porro voluptate numquam alias nulla neque reprehenderit, ea accusamus possimus hic fugit impedit cupiditate obcaecati! Recusandae ullam quis saepe hic nemo odit aliquid temporibus adipisci fugiat ad enim corrupti assumenda facilis nulla minus, consectetur earum! Optio assumenda accusantium architecto ut iste saepe mollitia dolores earum! Laboriosam possimus dignissimos, a atque ipsum quis tempora maiores vel nihil adipisci aut facere earum molestias distinctio dolorem tenetur culpa ipsa modi asperiores eius dolore. Doloremque provident excepturi quos atque modi, nemo corporis? Commodi corrupti earum, consectetur enim voluptate molestias. Mollitia adipisci, debitis ad soluta excepturi laboriosam assumenda porro atque dolorem iste eligendi consequatur?
-          </p>
+          
+          <ul>
+
+            <li class="active">
+              <div class="image">
+                <img src="assets/IMG/avatar/avatar_1.jpg" alt="">
+              </div>
+              <div class="user">
+                <span>Michele</span>
+                <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel commodi laborum aperiam adipisci consequuntur illo natus ad quis. Nihil fugiat fugit eligendi quia velit nisi expedita ex deserunt alias pariatur.</span>
+              </div>
+            </li>
+
+            <li class="">
+              <div class="image">
+                <img src="assets/IMG/avatar/avatar_1.jpg" alt="">
+              </div>
+              <div class="user">
+                <span>Michele</span>
+                <span>Ultimo messaggio</span>
+              </div>
+            </li>
+
+            <li class="">
+              <div class="image">
+                <img src="assets/IMG/avatar/avatar_1.jpg" alt="">
+              </div>
+              <div class="user">
+                <span>Michele</span>
+                <span>Ultimo messaggio</span>
+              </div>
+            </li>
+
+          </ul>
+
         </div>
 
       </aside>
