[add] STEPS milestone 2

--- a/Milestone 1/index.html
+++ b/Milestone 1/index.html
@@ -102,6 +102,11 @@
 
         </header>
 
+        <!-- TODO: aggiungere un ciclo per inserire i messaggi  -->
+
+        <!-- FIXME: PER AGGIUNGERE LA CLASSE SE RICEVUTO O INVIATO  -->
+        <!-- :class="contacts[0].messages[0].status"  -->
+
         <div class="content">
             <div class="message sent">
               inviato 
