[edit] funzione ricerca contatti

--- a/Milestone 4/index.html
+++ b/Milestone 4/index.html
@@ -54,7 +54,7 @@
           </div>
           <div class="search-bar">
             <i class="fa-solid fa-magnifying-glass"></i>
-            <input v-model="searchChat" @keydown="search" type="text" placeholder="Cerca o inizia una nuova chat">
+            <input v-model="searchChat" @keyup="search" type="text" placeholder="Cerca o inizia una nuova chat">
           </div>
         </nav>
 
