separato il database dallo script principale

--- a/Milestone 5/index.html
+++ b/Milestone 5/index.html
@@ -198,6 +198,6 @@
 
   </div>
   
-  <script src="assets/JS/script.js"></script>
+  <script type="module" src="assets/JS/script.js"></script>
 </body>
 </html>
