diviso il CSS in più cartelle

--- a/Milestone 5 bis/index.html
+++ b/Milestone 5 bis/index.html
@@ -12,6 +12,8 @@
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <!-- CSS  -->
   <link rel="stylesheet" href="assets/CSS/style.css">
+  <link rel="stylesheet" href="assets/CSS/aside.css">
+  <link rel="stylesheet" href="assets/CSS/main.css">
   <!-- ICON -->
   <link rel="icon" href="assets/IMG/comment-sms-solid.svg">
   <title>Boolzapp</title>
